Added lap and completed textlabels
Added two new text labels: One for the number of laps and one for the ammount completed. Currently both have placeholder values ("0 laps" and "00km/00km" respectively).

--- a/appinfo.json
+++ b/appinfo.json
@@ -9,6 +9,12 @@
     "resources": {
         "media": [
             {
+                "characterRegex": "[\\/0-9a-zA-Z:. ]",
+                "file": "fonts/VCR_OSD_MONO.ttf",
+                "name": "VCR_OSD_ALPHANUMERIC_20",
+                "type": "font"
+            },
+            {
                 "characterRegex": "[0-9:. ]",
                 "file": "fonts/VCR_OSD_MONO.ttf",
                 "name": "VCR_OSD_NUMERIC_24",
