--- a/appinfo.json
+++ b/appinfo.json
@@ -9,31 +9,8 @@
     "resources": {
         "media": [
             {
-                "file": "images/menuImage.png",
-                "menuIcon": true,
-                "name": "MENU_IMAGE",
-                "type": "png"
-            },
-            {
-                "characterRegex": "[\\/0-9a-zA-Z:\\. ]",
-                "file": "fonts/VCR_OSD_MONO.ttf",
-                "name": "VCR_OSD_ALPHANUMERIC_20",
-                "type": "font"
-            },
-            {
-                "characterRegex": "[0-9:\\.]",
-                "file": "fonts/VCR_OSD_MONO.ttf",
-                "name": "VCR_OSD_NUMERIC_24",
-                "type": "font"
-            },
-            {
-                "file": "images/bottom_button.png",
-                "name": "BOTTOM_BUTTON_IMG",
-                "type": "png"
-            },
-            {
-                "file": "images/middle_button.png",
-                "name": "MIDDLE_BUTTON_IMG",
+                "file": "images/right_bar.png",
+                "name": "RIGHT_BAR_IMG",
                 "type": "png"
             },
             {
@@ -42,13 +19,41 @@
                 "type": "png"
             },
             {
-                "file": "images/right_bar.png",
-                "name": "RIGHT_BAR_IMG",
+                "file": "images/middle_button.png",
+                "name": "MIDDLE_BUTTON_IMG",
+                "type": "png"
+            },
+            {
+                "file": "images/bottom_button.png",
+                "name": "BOTTOM_BUTTON_IMG",
+                "type": "png"
+            },
+            {
+                "characterRegex": "[0-9:\\.]",
+                "file": "fonts/VCR_OSD_MONO.ttf",
+                "name": "VCR_OSD_NUMERIC_24",
+                "type": "font"
+            },
+            {
+                "characterRegex": "[\\/0-9a-zA-Z:\\. ]",
+                "file": "fonts/VCR_OSD_MONO.ttf",
+                "name": "VCR_OSD_ALPHANUMERIC_20",
+                "type": "font"
+            },
+            {
+                "file": "images/menuImage.png",
+                "menuIcon": true,
+                "name": "MENU_IMAGE",
                 "type": "png"
             }
         ]
     },
+    "sdkVersion": "3",
     "shortName": "Pocket Runner",
+    "targetPlatforms": [
+        "aplite",
+        "basalt"
+    ],
     "uuid": "274d5bb8-b7b8-4ff9-b3f2-9b32cee39ad6",
     "versionCode": 1,
     "versionLabel": "1.0",
